--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <div class="item d-flex flex-column">
                         <div class="item-img d-flex flex-column">
                             <img src="./img/waffle.png" alt="waffle">
-                            <div class="add-to-cart">
+                            <button type="button" class="add-to-cart">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25"
                                     fill="none">
                                     <path
@@ -40,7 +40,7 @@
                                         stroke-linejoin="round" />
                                 </svg>
                                 <p>Add to cart</p>
-                            </div>
+                            </button>
                         </div>
                         <div class="item-heading d-flex flex-column gap-1">
                             <span>
@@ -80,7 +80,7 @@
                     <div class="item d-flex flex-column">
                         <div class="item-img d-flex flex-column">
                             <img src="./img/macaron-.png" alt="waffle">
-                            <div class="add-to-cart">
+                            <button type="button" class="add-to-cart">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25"
                                     fill="none">
                                     <path
@@ -89,7 +89,7 @@
                                         stroke-linejoin="round" />
                                 </svg>
                                 <p>Add to cart</p>
-                            </div>
+                            </button>
                         </div>
                         <div class="item-heading d-flex flex-column gap-1">
                             <span>
@@ -105,7 +105,7 @@
                     <div class="item d-flex flex-column">
                         <div class="item-img d-flex flex-column">
                             <img src="./img/tiramisu-.png" alt="waffle">
-                            <div class="add-to-cart">
+                            <button type="button" class="add-to-cart">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25"
                                     fill="none">
                                     <path
@@ -114,7 +114,7 @@
                                         stroke-linejoin="round" />
                                 </svg>
                                 <p>Add to cart</p>
-                            </div>
+                            </button>
                         </div>
                         <div class="item-heading d-flex flex-column gap-1">
                             <span>
@@ -130,7 +130,7 @@
                     <div class="item d-flex flex-column">
                         <div class="item-img d-flex flex-column">
                             <img src="./img/baklava.png" alt="waffle">
-                            <div class="add-to-cart">
+                            <button type="button" class="add-to-cart">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25"
                                     fill="none">
                                     <path
@@ -139,7 +139,7 @@
                                         stroke-linejoin="round" />
                                 </svg>
                                 <p>Add to cart</p>
-                            </div>
+                            </button>
                         </div>
                         <div class="item-heading d-flex flex-column gap-1">
                             <span>
@@ -155,7 +155,7 @@
                     <div class="item d-flex flex-column">
                         <div class="item-img d-flex flex-column">
                             <img src="./img/meringue.png" alt="waffle">
-                            <div class="add-to-cart">
+                            <button type="button" class="add-to-cart">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25"
                                     fill="none">
                                     <path
@@ -164,7 +164,7 @@
                                         stroke-linejoin="round" />
                                 </svg>
                                 <p>Add to cart</p>
-                            </div>
+                            </button>
                         </div>
                         <div class="item-heading d-flex flex-column gap-1">
                             <span>
@@ -180,7 +180,7 @@
                     <div class="item d-flex flex-column">
                         <div class="item-img d-flex flex-column">
                             <img src="./img/waffle.png" alt="waffle">
-                            <div class="add-to-cart">
+                            <button type="button" class="add-to-cart">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25"
                                     fill="none">
                                     <path
@@ -189,7 +189,7 @@
                                         stroke-linejoin="round" />
                                 </svg>
                                 <p>Add to cart</p>
-                            </div>
+                            </button>
                         </div>
                         <div class="item-heading d-flex flex-column gap-1">
                             <span>
@@ -205,7 +205,7 @@
                     <div class="item d-flex flex-column">
                         <div class="item-img d-flex flex-column">
                             <img src="./img/brownie-.png" alt="waffle">
-                            <div class="add-to-cart">
+                            <button type="button" class="add-to-cart">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25"
                                     fill="none">
                                     <path
@@ -214,7 +214,7 @@
                                         stroke-linejoin="round" />
                                 </svg>
                                 <p>Add to cart</p>
-                            </div>
+                            </button>
                         </div>
                         <div class="item-heading d-flex flex-column gap-1">
                             <span>
@@ -230,7 +230,7 @@
                     <div class="item d-flex flex-column">
                         <div class="item-img d-flex flex-column">
                             <img src="./img/panna-cotta.png" alt="waffle">
-                            <div class="add-to-cart">
+                            <button type="button" class="add-to-cart">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25"
                                     fill="none">
                                     <path
@@ -239,7 +239,7 @@
                                         stroke-linejoin="round" />
                                 </svg>
                                 <p>Add to cart</p>
-                            </div>
+                            </button>
                         </div>
                         <div class="item-heading d-flex flex-column gap-1">
                             <span>
